# NudgeSafe-Hands

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  QUICK_START.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  registration.html  requirements.txt  setup.bat  setup.sh
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
backend/: .env.example  .gitignore  BACKEND-INTEGRATION-READY.md  INTEGRATION-GUIDE.md  MANIFEST.in  README.md  demo.py  pyproject.toml  requirements.txt  setup.py
backend/src/clients/: safetygraph_client.py
backend/src/models/: safetygraph_models.py
backend/tests/: test_safetygraph_client.py
data/chemicals/: chemical-database-ax5.json
data/gloves/: glove-materials-ax5.json
docs/: AX5-SafeNudge-Branding-Guide.md  DEV-SETUP-GUIDE.md  INDEX-AX5-SafeNudge.md  README.md
docs/api/: api-reference-ax5-safenudge.md
docs/compliance/: compliance-standards-ax5.md  technical-specs-ax5.md
docs/deployment/: deployment-checklist-ax5.md  deployment-scenarios-ax5.md
docs/training/: training-program-ax5.md
examples/: README.md
examples/curl/: api_examples.sh
examples/javascript/: api_usage_example.js
examples/python/: api_usage_example.py
nudgesafe-hands-project/: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
nudgesafe-hands-project/src/: App.jsx  index.css
nudgesafe-hands-project/src/components/: NudgeSafeDashboard.jsx
nudgesafe-hands-project/src/data/: mockData.js
src/: README.md
src/app/: ax5-safenudge-dashboard.html  ax5-safenudge-glove-selector.html  ax5-safenudge-presentation.html
src/parsers/: fds-parser-ax5.py
tests/: README.md
